[package]
name = "loess"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2021"
rust-version = "1.56"
description = "A group-lazy defaulting speculative Rust parser."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/loess"
homepage = "https://github.com/Tamschi/loess/tree/v0.0.1"
documentation = "https://docs.rs/loess/0.0.1"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"COPYRIGHT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/loess" }
is-it-maintained-open-issues = { repository = "Tamschi/loess" }
maintenance = { status = "experimental" } # This may differ between branches.

[dev-dependencies]
cargo-husky = "1.5.0"
git_info = "0.1.2"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"

[dependencies]
either = "1.9.0"
proc-macro2 = "1.0.66"
this-is-fine = "0.0.1"
vec1 = "1.10.1"
